# sopel-dum-e

./: .gitignore  MANIFEST.in  README.md  setup.cfg  setup.py
sopel_dum_e/: __init__.py
