[metadata]
name = sopel-dum-e
version = 0.0.1
description = A Sopel plugin to be the comic relief.
author = Adam Platt
author_email = adam@plattsoft.net
url = https://github.com/platta/sopel-dum-e
license = GPLv3+
classifiers =
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Topic :: Communications :: Chat :: Internet Relay Chat

[options]
packages = find:
zip_safe = false
include_package_data = true
install_requires =
    sopel>=7.0,<8

[options.entry_points]
sopel.plugins =
    dum-e = sopel_dum_e
